@@ -1,6 +1,6 @@
 # Process this file with autoconf to produce a configure script.
-AC_INIT([libptp2],[1.0.3],[emsi@ipartners.pl])
-AM_INIT_AUTOMAKE(libptp2, 1.0.3)
+AC_INIT([libptp2],[1.1.0],[emsi@ipartners.pl])
+AM_INIT_AUTOMAKE(libptp2, 1.1.0)
 AC_PREREQ(2.53)
 AM_CONFIG_HEADER([config.h])
 AC_PROG_LIBTOOL
@@ -18,7 +18,7 @@ AC_PROG_LIBTOOL
 #    then set age to 0. 
 
 LIBPTP2_VERSION_CURRENT=2
-LIBPTP2_VERSION_REVISION=1
+LIBPTP2_VERSION_REVISION=2
 LIBPTP2_VERSION_AGE=1
 LIBPTP2_VERSION_INFO=$LIBPTP2_VERSION_CURRENT:$LIBPTP2_VERSION_REVISION:$LIBPTP2_VERSION_AGE
 AC_SUBST(LIBPTP2_VERSION_INFO)
